--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,14 +15,39 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
 
+    # - name: Setup .NET
+    #   uses: actions/setup-dotnet@v1
+    #   with:
+    #     dotnet-version: 5.0.x
+    #     source-url: https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json
+    #   env:
+    #     NUGET_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.0.2
 
-    - name: Build
-      run: msbuild BnsDatTool.sln /p:Configuration=Release
+    # - name: Build Zip
+    #   run: |
+    #     msbuild BnsDatTool.sln /p:Configuration=Release
+    #     Compress-Archive -Path "./BnsDatTool/bin/Release/*" -DestinationPath release.zip 
 
-    - name: Zip
-      run: Compress-Archive -Path "./BnsDatTool/bin/Release/*" -DestinationPath release.zip 
+    - name: Build NuGet Package
+      # if: github.ref == 'refs/heads/master'
+      run: |
+        $version = '${{ github.run_number }}.0.0'
+        $authors = '${{ github.repository_owner }}'
+        $url = 'https://github.com/${{ github.repository }}.git'
+        msbuild -t:restore
+        msbuild -t:pack -p:Configuration=Release -p:PackageVersion=$version -p:Authors=$authors -p:RepositoryUrl=$url -p:RepositoryType=git
+      
+    - name: Publish NuGet Package
+      # if: github.ref == 'refs/heads/master'
+      run: |
+        $url = 'https://nuget.pkg.github.com/${{ github.repository_owner }}/index.json'
+        # dotnet nuget push ".\BnsDatTool\bin\Package\*.nupkg" --api-key ${GITHUB_TOKEN} --skip-duplicate --no-symbols true
+        dotnet nuget push ".\BnsDatTool\bin\Package\*.nupkg" --source "${url}" --api-key "${Env:GITHUB_TOKEN}" --skip-duplicate --no-symbols true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Release
       id: create_release
